added new methods